--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section id="section-compass" >
       <div class="container-fluid">
         <div class="row justify-content-center">
-          <!-- <span class="banner_shape1"> <img src="assets/compass_circle.png" alt="image" > </span> -->
+          <span class="banner_shape1"> <img src="assets/compass_circle.png" alt="image" > </span>
           <div class="col-12">
             <div class="row justify-content-end">
 
@@ -91,14 +91,15 @@
                 <div class="row justify-content-center">
                   <div class="banner_text">
                     <img class="blue_img img-fluid" src="assets/compass_text.png" alt="image" >
-                    <h4>Халаасанд тань байх луужин</h4>
-                    <p>
+                    <h5 class="h5 text-dark mt-4">Халаасанд тань байх луужин</h5>
+                    <p class="text-dark " style="line-height: 1.2rem;">
                       Картын тусламжтайгаар зорилгоос тань саринуулах зах замбараагүй олон сонголт, мэдээлэл, боломжуудаас илүү чухлыг сонгоорой🌱
                     </p>
-                    <div class="compass-btn">
+                    <div class="compass-btn mt-5 text-center">
                       <a href="#">
-                        <img class="blue_img" src="assets/compass_button.png" alt="image" >
+                        <img class="img-fluid mb-2 mt-4" src="assets/button_black.png" alt="image" >
                       </a>
+                      <p><small>by TsoilogsoZ & Bogd Bank / Карт захиалах</small></p>
                     </div>
                   </div>
 
